--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,13 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  width: 1366px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
@@ -24,7 +30,26 @@ body {
   background-color: #FEAFC3;
 }
 
-.delivery-title, .presents-title, .assortment-title {
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.body-wrap {
+  width: 1170px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  margin: 0 auto;
+}
+
+.delivery-title, .presents-title, .assortment-title, .assortment-heading {
   font-size: 32px;
   line-height: 46px;
   font-weight: 900;
@@ -40,17 +65,50 @@ body {
 
 /* ---PAGES--- */
 
+.main-conteiner>*:not(:last-child) {
+  margin-bottom: 80px;
+}
+
+.page-header {
+  display: flex;
+  width: 1170px;
+}
+
+.main-logo {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.main-navigation {
+  display: flex;
+  width: 1017px;
+  margin-left: 16px;
+}
+
+.navigation-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 34px 0;
+  list-style-type: none;
+}
+
+.site-navigation {
+  width: 550px;
+  line-height: 20px;
+}
+
 .navigation-link {
   text-align: center;
 }
 
-.site-navigation {
-  line-height: 20px;
-}
-
 .phone {
-  line-height: 20px;
   font-weight: 700;
+  margin-right: 10px;
+  margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  line-height: 20px;
 }
 
 .user-navigation {
@@ -58,16 +116,95 @@ body {
   line-height: 20px;
 }
 
-.user-navigation .navigation-link {
-  background-color: #FEC7D5;
+.navigation-item {
+  margin: 8px 16px;
 }
 
 /* ---MAIN-INDEX--- */
 
+.promo {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.promo-slider {
+  display: flex;
+  width: 1170px;
+}
+
+.text-content {
+  width: 460px;
+  margin-left: 70px;
+}
+
 .promo-title {
+  display: inline-block;
   font-size: 36px;
   line-height: 46px;
   font-weight: 900;
+  width: 470px;
+  margin-top: 136px;
+  margin-bottom: 8px;
+}
+
+.button-promo {
+  display: inline-block;
+  margin-top: 28px;
+}
+
+.block-promo-current {
+  display: flex;
+  align-items: center;
+}
+
+.promo-button {
+  width: 38px;
+  height: 38px;
+  margin-right: ;
+}
+
+.promo-pagination {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin-right: auto;
+}
+
+.promo-pagination-item {
+  margin-right: 8px;
+}
+
+.promo-pagination-button {
+  width: 12px;
+  height: 12px;
+}
+
+.social {
+  width: 240px;
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.social-item {
+  width: 24px;
+  height: 24px;
+  background-color: white;
+  margin-right: 16px;
+}
+
+.social-item:last-child {
+  margin-right: 0;
+}
+
+.social-list.social-item {
+  margin-left: auto;
 }
 
 .button {
@@ -81,6 +218,29 @@ body {
 .navigation-link, .phone, .footer-info a, .button, .contacts-content-phone {
   color: inherit;
   text-decoration: none;
+}
+
+.presents-title {
+  width: 443px;
+  margin: 0 auto;
+}
+
+.presents-list {
+  display: flex;
+  width: 1170px;
+  justify-content: space-between;
+  margin: 56px 0 0 0;
+  padding: 0;
+}
+
+.presents-item {
+  display: flex;
+  width: 570px;
+}
+
+.presents-item-wrap {
+  padding: 40px;
+  width: 304px;
 }
 
 .presents-item-title {
@@ -103,8 +263,31 @@ body {
   font-weight: 700;
 }
 
+.assortment-heading {
+  width: 527px;
+  margin: 0 auto;
+}
+
+.assortment-title {
+  margin: 0 auto;
+}
+
+.assortment-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .assortment-item {
+  width: 270px;
   background-color: #FCFCFC;
+}
+
+.assortment-image {
+  display: block;
+  margin: 0 auto;
 }
 
 .assortment-item p {
@@ -112,14 +295,16 @@ body {
 }
 
 .description {
-  background-image: url("../images/fon/fon-description.jpg");
+  width: 1170px;
+  background-image: url("../images/background/fon-description.jpg");
   background-size: 100% auto;
-  background-repeat: no-repeat;
+  box-sizing: border-box;
   padding: 24px;
 }
 
 .description-wrap {
   background-color: #FCFCFC;
+  padding: 56px 40px;
 }
 
 .description-title {
@@ -127,18 +312,69 @@ body {
   line-height: 46px;
   font-weight: 900;
   text-align: center;
+  margin: 0 0 56px 0;
+}
+
+.description-item {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-auto-flow: row;
+  column-gap: 31px;
+  row-gap: 40px;
+  padding: 0;
+  margin: 0;
+}
+
+.description-list {
+  display: flex;
+}
+
+.description-image {
+  margin-right: 15px;
+}
+
+.description-list p {
+  margin: 0;
+  width: 440px;
+}
+
+.news-mailing {
+  width: 1170px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .news {
-  background-image: url("../images/fon/Blog.jpg");
+  width: 570px;
+  background-image: url("../images/background/blog.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
 
+.news p {
+  display: block;
+  margin: 32px 0 12px 32px;
+  max-width: 220px;
+}
+
 .news-text {
+  display: block;
+  margin: 0 0 32px 32px;
+  max-width: 303px;
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
+}
+
+.mailing {
+  width: 570px;
+  background-color: white;
+}
+
+.mailing-desc {
+  display: block;
+  margin: 26px;
+  max-width: 506px;
 }
 
 .mailing-button, .form-delivery .button, .contacts-content .button {
@@ -147,9 +383,28 @@ body {
 }
 
 .delivery {
-  background-image: url("../images/fon/Dost.jpg");
+  padding: 176px 0 100px 100px;
+  background-image: url("../images/background/dost.jpg");
   background-size: 100% auto;
   background-repeat: no-repeat;
+}
+
+.delivery-title {
+  display: block;
+  max-width: 333px;
+  margin: 0 0 24px 0;
+}
+
+.delivery-desc {
+  display: block;
+  max-width: 371px;
+  margin: 0;
+}
+
+.delivery-content {
+  width: 500px;
+  height: 406px;
+  background-color: white;
 }
 
 .form-delivery label {
@@ -158,9 +413,19 @@ body {
 }
 
 .contacts {
-  background-image: url(..//images/fon/Obr-sv.jpg);
+  width: 1170px;
+  padding: 64px;
+  background-image: url(..//images/background/obr-sv.jpg);
   background-size: 100% auto;
   background-repeat: no-repeat;
+  box-sizing: border-box;
+}
+
+.contacts-content {
+  width: 343px;
+  box-sizing: border-box;
+  background-color: white;
+  padding: 40px;
 }
 
 .contacts-content p {
@@ -169,6 +434,25 @@ body {
 }
 
 /* ---FOOTER--- */
+
+.page-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-info {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-auto-flow: row;
+  column-gap: 24px;
+  row-gap: 8px;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-info p {
+  margin: 0;
+}
 
 .footer-info a {
   font-size: 14px;
@@ -197,6 +481,10 @@ body {
 
 .breadcrambs-link {
   color: inherit;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .catalog-filter-title {
