--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,14 @@
 @font-face {
   font-family: "Inter";
   font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/inter-400.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
   font-weight: 700;
   src: url("../fonts/inter-700.woff2") format("woff2");
   font-display: swap;
@@ -16,18 +24,28 @@
   font-display: swap;
 }
 
+/*
+outline: 5px solid red;
+outline-offset: -5px;
+ */
+
 html {
   height: 100%;
 }
 
 body {
   margin: 0;
-  width: 1366px;
+  width: 100%;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
   color: #2D3440;
   background-color: #FEAFC3;
+}
+
+.page-container {
+  width: 1170px;
+  margin: 0 auto;
 }
 
 .visually-hidden {
@@ -41,15 +59,22 @@ body {
   overflow: hidden;
 }
 
-.page-container {
+.reset-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.main-conteiner {
   width: 1170px;
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   min-height: 100%;
   margin: 0 auto;
 }
 
-.delivery-title, .presents-title, .assortment-title, .assortment-heading {
+.title-bold {
   font-size: 32px;
   line-height: 46px;
   font-weight: 900;
@@ -65,13 +90,9 @@ body {
 
 /* ---PAGES--- */
 
-.main-conteiner {
-  flex-grow: 1;
-}
-
-.main-conteiner>*:not(:last-child) {
+/* .main-conteiner>*:not(:last-child) {
   margin-bottom: 80px;
-}
+} */
 
 .page-header {
   display: flex;
@@ -92,9 +113,6 @@ body {
 .navigation-list {
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
-  margin: 34px 0;
-  list-style-type: none;
 }
 
 .site-navigation {
@@ -110,8 +128,6 @@ body {
   font-weight: 700;
   margin-right: 10px;
   margin-left: auto;
-  margin-top: auto;
-  margin-bottom: auto;
   line-height: 20px;
 }
 
@@ -121,7 +137,7 @@ body {
 }
 
 .navigation-item {
-  margin: 8px 16px;
+  margin: 0 16px;
 }
 
 /* ---MAIN-INDEX--- */
@@ -132,33 +148,82 @@ body {
 }
 
 .promo-slider {
+  width: 100%;
   display: flex;
-  width: 1170px;
+  position: relative;
 }
 
-.text-content {
-  width: 460px;
+.slider-item {
   margin-left: 70px;
+  display: flex;
+}
+
+.slider-item:not(.slider-item-current) {
+  display: none;
+}
+
+.promo-desc {
+  width: 470px;
 }
 
 .promo-title {
-  display: inline-block;
   font-size: 36px;
   line-height: 46px;
   font-weight: 900;
   width: 470px;
-  margin-top: 136px;
-  margin-bottom: 8px;
 }
 
-.button-promo {
-  display: inline-block;
-  margin-top: 28px;
+.promo-image-wrap {
+  width: 312px;
+  margin-left: 21px;
 }
 
-.block-promo-current {
+.promo-image-wrap.image {
+  display: block;
+  margin: 0 auto;
+}
+
+.slider-preview-list {
+  margin-left: 56px;
+}
+
+.slider-preview-item {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.slider-preview-item:not(.slider-preview-item-current) {
+  display: none;
+}
+
+.bg-image {
+  width: 100px;
+}
+
+.bg-image .image {
+  display: block;
+  margin: 0 auto;
+}
+
+.promo-pagination {
+  position: absolute;
+}
+
+.slider-buttons-item {
+  display: flex;
+  position: absolute;
+}
+
+.promo-arrow {
+  position: relative;
+}
+
+.promo-social {
+  margin-left: auto;
+}
+
+.slider-buttons {
+  display: flex;
 }
 
 .promo-button {
@@ -169,10 +234,9 @@ body {
 
 .promo-pagination {
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
   margin-right: auto;
+  display: none;
+  /* убрал временно - спозиционирую абсолютно */
 }
 
 .promo-pagination-item {
@@ -185,15 +249,12 @@ body {
 }
 
 .social {
-  width: 240px;
+  width: 231px;
 }
 
 .social-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 .social-item {
@@ -227,14 +288,13 @@ body {
 .presents-title {
   width: 443px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .presents-list {
   display: flex;
   width: 1170px;
   justify-content: space-between;
-  margin: 56px 0 0 0;
-  padding: 0;
 }
 
 .presents-item {
@@ -270,6 +330,7 @@ body {
 .assortment-heading {
   width: 527px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .assortment-title {
@@ -279,31 +340,70 @@ body {
 .assortment-list {
   display: flex;
   justify-content: space-between;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 }
 
 .assortment-item {
   width: 270px;
   background-color: #FCFCFC;
+  /* position: relative;
+  margin-top: 51px;
+  display: grid;
+  grid-template-columns: 40px 158px 32px 40px;
+  grid-template-rows: 133px min-content min-content auto 16px;
+  row-gap: 8px;
+
+  ----------ЗАКОМЕНТИЛ КАРТОЧКИ-----------*/
 }
 
 .assortment-image {
   display: block;
   margin: 0 auto;
+  /* position: absolute;
+  top: -51px;
+  left: 51px; */
+}
+
+.assortment-title {
+  margin: 0;
+  grid-column: 2/4;
+  grid-row: 2/3;
 }
 
 .assortment-item p {
   text-align: center;
+  margin: 0;
+  grid-column: 2/4;
+  grid-row: 3/4;
+}
+
+.assortment-item b {
+  margin-top: 12px;
+  grid-column: 2/3;
+  grid-row: 4/5;
+  align-self: end;
+}
+
+.assortment-button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  line-height: 0;
+  margin-top: 8px;
+  justify-self: end;
+  grid-column: 3/4;
+  grid-row: 4/5;
+  align-self: end;
 }
 
 .description {
   width: 1170px;
-  background-image: url("../images/background/fon-description.jpg");
+  background-color: tan;
   background-size: 100% auto;
   box-sizing: border-box;
-  padding: 24px;
+  /* padding: 24px; */
 }
 
 .description-wrap {
@@ -320,18 +420,22 @@ body {
 }
 
 .description-item {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-auto-flow: row;
-  column-gap: 31px;
-  row-gap: 40px;
-  padding: 0;
-  margin: 0;
+  /* display: flex;
+  flex-wrap: wrap; */
 }
 
 .description-list {
-  display: flex;
+  /* display: flex; */
+  width: 505px;
 }
+
+/* .description-list:not(:nth-child(2n)) {
+  margin-right: 32px;
+}
+
+.description-list:not(:nth-last-child(-n+2)):not(:last-child) {
+  margin-bottom: 40px;
+} */
 
 .description-image {
   margin-right: 15px;
@@ -350,13 +454,13 @@ body {
 
 .news {
   width: 570px;
-  background-image: url("../images/background/blog.jpg");
+  background-color: white;
+  /* background-image: url("../images/background/blog.jpg"); */
   background-size: 100% auto;
   background-repeat: no-repeat;
 }
 
 .news p {
-  display: block;
   margin: 32px 0 12px 32px;
   max-width: 220px;
 }
@@ -376,7 +480,6 @@ body {
 }
 
 .mailing-desc {
-  display: block;
   margin: 26px;
   max-width: 506px;
 }
@@ -387,21 +490,24 @@ body {
 }
 
 .delivery {
-  padding: 176px 0 100px 100px;
-  background-image: url("../images/background/dost.jpg");
+  background-color: rgb(207, 207, 207);
+  /* background-image: url("../images/background/dost.jpg"); */
   background-size: 100% auto;
   background-repeat: no-repeat;
+  display: flex;
+}
+
+.delivery-desc {
+  margin: 167px auto auto 100px;
 }
 
 .delivery-title {
-  display: block;
   max-width: 333px;
   margin: 0 0 24px 0;
 }
 
-.delivery-desc {
-  display: block;
-  max-width: 371px;
+.delivery-desc-text {
+  width: 371px;
   margin: 0;
 }
 
@@ -409,6 +515,7 @@ body {
   width: 500px;
   height: 406px;
   background-color: white;
+  margin: 64px 64px 64px auto;
 }
 
 .form-delivery label {
@@ -419,7 +526,8 @@ body {
 .contacts {
   width: 1170px;
   padding: 64px;
-  background-image: url(..//images/background/obr-sv.jpg);
+  background-color: wheat;
+  /* background-image: url(..//images/background/obr-sv.jpg); */
   background-size: 100% auto;
   background-repeat: no-repeat;
   box-sizing: border-box;
@@ -451,7 +559,7 @@ body {
   column-gap: 24px;
   row-gap: 8px;
   padding: 0;
-  margin: 0;
+  margin: 0 200px;
 }
 
 .footer-info p {
@@ -465,6 +573,10 @@ body {
 
 .footer-info .footer-info-suppliers {
   font-weight: 700;
+}
+
+.copyright {
+  width: 207px;
 }
 
 .copyright a {
@@ -491,9 +603,6 @@ body {
   max-width: 100%;
   display: flex;
   flex-wrap: wrap;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
 .breadcrambs-item {
@@ -536,6 +645,7 @@ body {
 .pagination-wrap-button {
   position: absolute;
   left: 50%;
+  transform: translate(-50%);
 }
 
 .pagination-wrap {
@@ -544,9 +654,7 @@ body {
 
 .pagination {
   display: flex;
-  margin: 0 0 0 auto;
-  padding: 0;
-  list-style-type: none;
+  margin-left: auto;
 }
 
 .pagination-item:not(:last-child) {
