--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,7 @@ html {
 body {
   margin: 0;
   width: 100%;
+  height: 100%;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
@@ -46,6 +47,9 @@ body {
 .page-container {
   width: 1170px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .visually-hidden {
@@ -339,11 +343,14 @@ body {
 
 .assortment-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1170px;
+
 }
 
 .assortment-item {
   width: 270px;
+  margin-right: 30px;
   background-color: #FCFCFC;
   /* position: relative;
   margin-top: 51px;
@@ -353,6 +360,9 @@ body {
   row-gap: 8px;
 
   ----------ЗАКОМЕНТИЛ КАРТОЧКИ-----------*/
+}
+.assortment-item:nth-child(4n) {
+  margin-right: 0;
 }
 
 .assortment-image {
@@ -636,11 +646,6 @@ body {
   font-weight: 700;
 }
 
-.assortment-list {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1170px;
-}
 
 .pagination-wrap-button {
   position: absolute;
