--- a/styles/styles.css
+++ b/styles/styles.css
@@ -381,9 +381,7 @@ body {
   text-align: center;
 }
 
-.assortment-title {
-  margin: 0 auto;
-}
+
 
 .assortment-list {
   display: flex;
@@ -447,7 +445,9 @@ body {
   justify-self: end;
   align-self: end;
 }
-
+.assortment-catalog {
+  margin-bottom: 9px;
+}
 .description {
   max-width: 1170px;
   background-color: tan;
@@ -502,6 +502,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-top: -2px;
 }
 
 .news {
@@ -559,6 +560,7 @@ body {
   width: 332px;
   height: 48px;
   padding-left: 16px;
+  box-sizing: border-box;
 }
 
 .mailing-button, .form-delivery .button, .contacts-content .button {
@@ -572,6 +574,7 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   display: flex;
+  margin-top: -5px;
 }
 
 .delivery-desc {
@@ -609,6 +612,8 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   box-sizing: border-box;
+  /* убрать высоту! */
+  height: 492px;
 }
 
 .contacts-content {
@@ -642,6 +647,7 @@ body {
 
 .footer-info p {
   margin: 0;
+  display: grid;
 }
 
 .footer-info a {
@@ -657,9 +663,7 @@ body {
   width: 207px;
 }
 
-.copyright-image {
-  margin-top: 2px;
-}
+
 
 .copyright a {
   color: inherit;
@@ -668,7 +672,7 @@ body {
 .copyright p {
   font-size: 12px;
   line-height: 16px;
-  margin: 11px 0 0 0;
+  margin: 8px 0 0 0;
 }
 
 /* ---CATALOG--- */
