--- a/styles/styles.css
+++ b/styles/styles.css
@@ -115,8 +115,8 @@ body {
 
 .main-navigation {
   display: flex;
-  max-width: 1017px;
   margin: 42px 0 42px 16px;
+  width: 100%;
 }
 
 .navigation-list {
@@ -131,6 +131,7 @@ body {
 
 .navigation-link {
   text-align: center;
+  padding: 8px 16px;
 }
 
 .phone {
@@ -143,11 +144,20 @@ body {
 .user-navigation {
   font-size: 14px;
   line-height: 20px;
+  flex-grow: 1;
+  justify-content: end;
+
+
+}
+.user-navigation .navigation-item {
+margin-left: 16px;
+
+}
+.user-navigation .navigation-link {
+  background: #FEC7D5;
+  border-radius: 26px;
 }
 
-.navigation-item {
-  margin: 0 16px;
-}
 
 /* ---MAIN-INDEX--- */
 
@@ -364,7 +374,7 @@ body {
 
 .presents-item-desc {
   margin: 0;
-  margin-bottom: 32px;
+  margin-bottom: 28px;
 }
 
 .text-norm {
@@ -373,8 +383,19 @@ body {
   font-weight: 700;
   align-self: flex-start;
   padding-top: 3px;
-}
 
+}
+.contacts-content-adres{
+  margin: 9px 0;
+  display: block;
+}
+.contacts-order {
+  margin: 24px 0 12px 0;
+}
+.contacts-time { margin: 0;
+  font-size: 14px;
+  line-height: 20px;
+margin-bottom: 27px;}
 .assortment-heading {
   max-width: 527px;
   margin: 0 auto 56px auto;
@@ -425,6 +446,7 @@ body {
   margin: 0;
   margin-bottom: 16px;
   align-content: stretch;
+  flex-grow: 1;
 }
 
 .assortment-item b {
@@ -455,7 +477,7 @@ body {
   background-repeat: repeat;
   box-sizing: border-box;
   padding: 24px;
-  margin-top: 39px;
+  margin-top: 39px
 }
 
 .description-wrap {
@@ -511,7 +533,7 @@ body {
   background-color: white;
   background-image: url("../images/background/blog.jpg");
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: cover;
 }
 
 .news p {
@@ -529,6 +551,7 @@ body {
 }
 
 .mailing {
+  display: flex;
   width: 570px;
   padding: 6px;
   background-color: gray;
@@ -563,10 +586,10 @@ body {
   box-sizing: border-box;
 }
 
-.mailing-button, .form-delivery .button, .contacts-content .button {
+/* помоему ненужно   .mailing-button, .form-delivery .button, .contacts-content .button {
   background-color: #FF2F63;
   color: #FCFCFC;
-}
+} */
 
 .delivery {
   background-color: rgb(207, 207, 207);
@@ -589,6 +612,7 @@ body {
 .delivery-desc-text {
   width: 371px;
   margin: 0;
+  color: #565C66;
 }
 
 .delivery-content {
@@ -599,12 +623,42 @@ body {
   padding: 40px 40px 42px 40px;
   box-sizing: border-box;
 }
-
+.delivery-content-desc {
+  margin: 0 0 29px 0;
+}
+.form-delivery {
+  display: grid;
+  grid-template-columns: 117px 287px;
+  row-gap: 20px;
+  column-gap: 16px;
+}
+.field-group {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+.form-delivery-date {
+  grid-column: 1/2;
+}
+.form-delivery-adress {
+  grid-column: 1/-1;
+}
+.link-form-wrap {
+  grid-column: 1/-1;
+  justify-self: center;
+  margin-top: 9px;
+}
 .form-delivery label {
   line-height: 20px;
   font-weight: 700;
 }
+.field-group input {
+  padding: 14px 16px;
+}
 
+.form-label {
+  margin-bottom: 8px;
+}
 .contacts {
   padding: 64px;
   background-color: wheat;
@@ -622,10 +676,18 @@ body {
   background-color: white;
   padding: 40px;
 }
+.contacts-content-text {
+  margin: 0;
+  color: #565C66;
+  font-size: 16px;
+  line-height: 22px;
+}
+}
 
 .contacts-content p {
   font-size: 14px;
   line-height: 20px;
+  color: #565C66;
 }
 
 /* ---FOOTER--- */
@@ -675,6 +737,32 @@ body {
   margin: 8px 0 0 0;
 }
 
+.button-white {
+  padding: 12px 32px;
+  display: inline-block;
+  border: 4px solid rgba(255, 47, 100, 0.3);
+  box-shadow: 0px 4px 12px rgb(45 52 64 / 10%);
+  border-radius: 26px;
+  margin-left: -4px;
+}
+.button-pink {
+  padding: 12px 32px;
+  display: inline-block;
+  color:white;
+  background: #FF2F64;
+  /* border: 4px solid rgba(255, 47, 100, 0.3);
+  box-shadow: 0px 4px 12px rgba(45, 52, 64, 0.1); */
+border-radius: 26px;
+}
+.button-pink-wrap{
+  display: inline-block;
+  padding: 4px;
+  background-color: rgba(255, 47, 100, 0.3);
+  border-radius: 26px;
+
+  margin-left: -4px;
+
+}
 /* ---CATALOG--- */
 
 .main-container {
@@ -682,13 +770,14 @@ body {
 }
 
 .catalog {
-  margin-top: 30px;
-  margin-bottom: 40px;
+  margin-top: 28px;
+  border-bottom: 1px solid #FEC7D5;
 }
 
 .navigation-link-current {
   color: #FCFCFC;
   background-color: #FF4A78;
+  border-radius: 26px;
 }
 
 .breadcrumbs-list {
@@ -748,7 +837,7 @@ body {
 
 .pagination-wrap {
   display: flex;
-  padding: 27px 0 42px 0;
+  padding: 27px 0 92px 0;
 }
 
 .pagination {
